# question-7

./: README.md  pyproject.toml
src/: dois_elementos.py  main.py  test.py  um_elemento.py
src/fem/: __init__.py  element.py  load.py  material.py  node.py  scripts.py  section.py  structure.py  support.py  view.py
